Stage 4: Environment-aware configuration + Header mapping fixes
- Add environment-aware configuration system (Docker vs local development)
- Create config-local.json for local dev and config/config.json for Docker
- Fix header mapping functionality in ProxyService
- Add comprehensive header mapping tests (unit and integration)
- Update UI: fix activate button, system overview, and YAML→JSON references
- Clean up RouteService to remove duplicate static resource filtering
- Update all route configurations to use downstream URL
- Add JsonConfigurationService with automatic environment detection
- Replace WireMock with MockWebServer for Spring Boot 3 compatibility

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>